--- a/C5/Final_Assignment Library.ipynb
+++ b/C5/Final_Assignment Library.ipynb
@@ -723,14 +723,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "amd = yf.Ticker(\"AMD\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {
     "tags": []
    },
@@ -739,16 +743,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2024-02-25 06:04:02--  https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/data/amd.json\n",
+      "--2024-02-25 06:11:14--  https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/data/amd.json\n",
       "Resolving cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud (cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud)... 169.63.118.104, 169.63.118.104\n",
       "Connecting to cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud (cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud)|169.63.118.104|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 5838 (5.7K) [application/json]\n",
-      "Saving to: ‘amd.json’\n",
+      "Saving to: ‘amd.json.1’\n",
       "\n",
-      "amd.json            100%[===================>]   5.70K  --.-KB/s    in 0s      \n",
+      "amd.json.1          100%[===================>]   5.70K  --.-KB/s    in 0s      \n",
       "\n",
-      "2024-02-25 06:04:02 (50.4 MB/s) - ‘amd.json’ saved [5838/5838]\n",
+      "2024-02-25 06:11:14 (26.7 MB/s) - ‘amd.json.1’ saved [5838/5838]\n",
       "\n"
      ]
     }
@@ -1002,25 +1006,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'history'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_1589/1087677545.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mamd_info\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhistory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mperiod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"max\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'history'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-03-17 00:00:00-05:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.302083</td>\n",
+       "      <td>3.125000</td>\n",
+       "      <td>3.145833</td>\n",
+       "      <td>219600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-03-18 00:00:00-05:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.125000</td>\n",
+       "      <td>2.937500</td>\n",
+       "      <td>3.031250</td>\n",
+       "      <td>727200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-03-19 00:00:00-05:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.083333</td>\n",
+       "      <td>3.020833</td>\n",
+       "      <td>3.041667</td>\n",
+       "      <td>295200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-03-20 00:00:00-05:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.062500</td>\n",
+       "      <td>3.010417</td>\n",
+       "      <td>3.010417</td>\n",
+       "      <td>159600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-03-21 00:00:00-05:00</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.020833</td>\n",
+       "      <td>2.906250</td>\n",
+       "      <td>2.916667</td>\n",
+       "      <td>130800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-16 00:00:00-05:00</th>\n",
+       "      <td>177.449997</td>\n",
+       "      <td>180.330002</td>\n",
+       "      <td>173.250000</td>\n",
+       "      <td>173.869995</td>\n",
+       "      <td>53896000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-20 00:00:00-05:00</th>\n",
+       "      <td>171.139999</td>\n",
+       "      <td>171.809998</td>\n",
+       "      <td>162.000000</td>\n",
+       "      <td>165.690002</td>\n",
+       "      <td>66550000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-21 00:00:00-05:00</th>\n",
+       "      <td>162.740005</td>\n",
+       "      <td>164.899994</td>\n",
+       "      <td>161.809998</td>\n",
+       "      <td>164.289993</td>\n",
+       "      <td>48774600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-22 00:00:00-05:00</th>\n",
+       "      <td>173.199997</td>\n",
+       "      <td>183.830002</td>\n",
+       "      <td>172.000000</td>\n",
+       "      <td>181.860001</td>\n",
+       "      <td>100684700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-02-23 00:00:00-05:00</th>\n",
+       "      <td>181.860001</td>\n",
+       "      <td>183.800003</td>\n",
+       "      <td>174.550003</td>\n",
+       "      <td>176.520004</td>\n",
+       "      <td>69151200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11078 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Open        High         Low       Close  \\\n",
+       "Date                                                                        \n",
+       "1980-03-17 00:00:00-05:00    0.000000    3.302083    3.125000    3.145833   \n",
+       "1980-03-18 00:00:00-05:00    0.000000    3.125000    2.937500    3.031250   \n",
+       "1980-03-19 00:00:00-05:00    0.000000    3.083333    3.020833    3.041667   \n",
+       "1980-03-20 00:00:00-05:00    0.000000    3.062500    3.010417    3.010417   \n",
+       "1980-03-21 00:00:00-05:00    0.000000    3.020833    2.906250    2.916667   \n",
+       "...                               ...         ...         ...         ...   \n",
+       "2024-02-16 00:00:00-05:00  177.449997  180.330002  173.250000  173.869995   \n",
+       "2024-02-20 00:00:00-05:00  171.139999  171.809998  162.000000  165.690002   \n",
+       "2024-02-21 00:00:00-05:00  162.740005  164.899994  161.809998  164.289993   \n",
+       "2024-02-22 00:00:00-05:00  173.199997  183.830002  172.000000  181.860001   \n",
+       "2024-02-23 00:00:00-05:00  181.860001  183.800003  174.550003  176.520004   \n",
+       "\n",
+       "                              Volume  Dividends  Stock Splits  \n",
+       "Date                                                           \n",
+       "1980-03-17 00:00:00-05:00     219600        0.0           0.0  \n",
+       "1980-03-18 00:00:00-05:00     727200        0.0           0.0  \n",
+       "1980-03-19 00:00:00-05:00     295200        0.0           0.0  \n",
+       "1980-03-20 00:00:00-05:00     159600        0.0           0.0  \n",
+       "1980-03-21 00:00:00-05:00     130800        0.0           0.0  \n",
+       "...                              ...        ...           ...  \n",
+       "2024-02-16 00:00:00-05:00   53896000        0.0           0.0  \n",
+       "2024-02-20 00:00:00-05:00   66550000        0.0           0.0  \n",
+       "2024-02-21 00:00:00-05:00   48774600        0.0           0.0  \n",
+       "2024-02-22 00:00:00-05:00  100684700        0.0           0.0  \n",
+       "2024-02-23 00:00:00-05:00   69151200        0.0           0.0  \n",
+       "\n",
+       "[11078 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "amd_info.history(period=\"max\")"
+    "amd.history(period=\"max\")"
    ]
   },
   {
